--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CodeDanny</title>
     <link rel="stylesheet" href="style.css">
+    
     <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css">
 
 </head>
@@ -22,7 +23,7 @@
             <div class="number">
                 <a href="#"><i class="fa fa-phone"></i></a>
                 <span>02134154956</span>
-            </div>|
+            </div>
             <div class="emailT">
                 <a href="#"><i class="fa fa-envelope"></i></a>
                 <span>codedanny@gmail.com</span>
