--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -41,7 +41,7 @@
                 </ul>
                 <div class="button">
                     <a href="#" id="hire2">Message Me!</a>
-                    <a href="#" id="hire2">Download CV</a>
+                    <a href="image/Resume_240228_112715.pdf" target="_blank" id="hire2">Download CV</a>
                 </div>
             </div>
             <div class="image">
